OPSMN-2652: FF scrollbar fix. Scrollbar for facet values were shown even when the facet values were displayed within allowed max-height.

--- a/www/app/styles/query.css
+++ b/www/app/styles/query.css
@@ -381,7 +381,7 @@
 .os-query-facets-panel .facet .values ul {
   list-style-type: none;
   padding-left: 20px;
-  margin-bottom: 1px;
+  margin-bottom: 5px;
 }
 
 .os-query-facets-panel .facet .values .value {
